--- a/website_template/css/style.css
+++ b/website_template/css/style.css
@@ -10,7 +10,7 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 100%;
+    width: 1348px;
 }
 
 .slider {
@@ -187,22 +187,6 @@ body {
     height: 270px;
 }
 
-.featured {
-    border-bottom: 3px solid #212121;
-    padding: 0 13px 10px 13px;
-}
-
-.explore_all {
-    padding-top: 16px;
-}
-
-.new {
-    margin-right: 617px;
-    color: #6c6c6c;
-    border-bottom: 1.5px solid;
-    padding: 0 32px 10px 34px;
-}
-
 .tab-controll a {
     text-decoration: none;
 }
@@ -212,6 +196,8 @@ body {
     line-height: 1.2;
     font-weight: 700;
     color: #212121;
+    border-bottom: 3px solid #212121;
+    padding: 0 13px 10px 13px;
 }
 
 .new_link {
@@ -219,6 +205,8 @@ body {
     line-height: 1.2;
     font-weight: 700;
     color: #6c6c6c;
+    border-bottom: 1.5px solid #6c6c6c;
+    padding: 0 32px 11px 34px;
 }
 
 .explore_all_link {
@@ -228,6 +216,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.2em;
     color: #212121;
+    margin-top: 16px;
 }
 
 .tab-content {
@@ -239,6 +228,19 @@ body {
     width: 270px;
     height: 270px;
     background-image: url(../img/product_1_active.jpg);
+    position: relative;
+}
+
+.background-product {
+    width: 270px;
+    height: 270px;
+    opacity: 0.9;
+    background-color: #ffffff;
+    border: 1px solid #9c9c9c;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .product_active {
@@ -257,10 +259,13 @@ body {
     margin-bottom: 19px;
     border: none;
     outline: none;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.product_active_titile {
+.product_active_title {
+    display: block;
     font-size: 22px;
     line-height: 29px;
     font-weight: 700;
@@ -274,10 +279,12 @@ body {
     font-weight: 300;
     color: #6c6c6c;
     text-align: center;
+    width: 211px;
 }
 
 .product_active_button img {
-    /*&!&!&*/
+    width: 20px;
+    height: 20px;
 }
 
 .promo-product {
@@ -292,7 +299,8 @@ body {
 
 .promo-content-1 {
     background-image: url(../img/promo_product_1.jpg);
-    padding: 228px 259px 256px 50px;
+    padding: 228px 0 0 50px;
+    width: 683px;
 }
 
 .promo-1-exclusive {
@@ -311,6 +319,7 @@ body {
     font-weight: 700;
     color: #212121;
     margin-bottom: 24px;
+    display: block;
 }
 
 .promo-1-text {
@@ -318,7 +327,7 @@ body {
     line-height: 24px;
     font-weight: 374;
     color: #6c6c6c;
-    width: 374px;
+    width: 385px;
     margin-bottom: 34px;
 }
 
@@ -436,6 +445,10 @@ body {
     justify-content: space-between;
     margin-bottom: 64px;
 }
+
+.item_1, .item_2, .item_3{
+    margin-bottom: 30px;
+} 
 
 .trending-title {
     font-size: 36px;
